--- a/index.html
+++ b/index.html
@@ -3,54 +3,62 @@
 
 <head>
   <meta charset="UTF-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikcraft</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
 
 <body>
-  <img src="./img/bikcraft.svg" alt="">
-  <div class="menu">
-    <a href="/">SOBRE</a>
-    <a href="/">PRODUTOS</a>
-    <a href="/">LOJAS</a>
-    <a href="/">CONTATO</a>
-  </div>
-  <div class="conteudo">
-    <div class="introducao">
-      <span class="detalhe"></span>
-      <h1>Bicicletas Feitas a Mão</h1>
-      <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
-      <a class="botao" href="/">VER MAIS</a>
-    </div>
-    <img src="./img/bicicleta.jpg" alt="Bicicleta Eletrica">
-    <h2 class="subtitulo">Vantagens Bikcraft</h2>
-    <div class="vantagens">
-      <div class="vantagens-item">
-        <img src="./img/eletrica.svg" alt="">
-        <h3>Motor Elétrico</h3>
-        <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-      </div>
-      <div class="vantagens-item">
-        <img src="./img/velocidade.svg" alt="">
-        <h3>40 km/h</h3>
-        <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-      </div>
-      <div class="vantagens-item">
-        <img src="./img/rastreador.svg" alt="">
-        <h3>Rastreador</h3>
-        <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
-      </div>
+  <header class="header">
+    <img src="./img/bikcraft.svg" alt="Bikcraft">
 
-    </div>
-  </div>
+    <nav aria-label="primária">
+      <ul class="menu">
+        <li><a href="/">SOBRE</a></li>
+        <li><a href="/">PRODUTOS</a></li>
+        <li><a href="/">LOJAS</a></li>
+        <li><a href="/">CONTATO</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <div class="rodape">
+  <main>
+    <article class="conteudo" area-labelledby="label-introducao">
+      <div class="introducao">
+        <h1 id="label-introducao">Bicicletas Feitas a Mão</h1>
+        <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
+        <a class="botao" href="/">VER MAIS</a>
+      </div>
+      <div class="introducao-cover">
+        <img src="./img/bicicleta.jpg" alt="Bicicleta Eletrica">
+      </div>
+    </article>
+
+    <article class="conteudo conteudo-vantagem" area-labelledby="label-vantagens">
+      <h2 class="subtitulo" id="label-vantagens">Vantagens Bikcraft</h2>
+      <ul class="vantagens">
+        <li class="vantagens-item">
+          <img src="./img/eletrica.svg" alt="">
+          <h3>Motor Elétrico</h3>
+          <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="./img/velocidade.svg" alt="">
+          <h3>40 km/h</h3>
+          <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="./img/rastreador.svg" alt="">
+          <h3>Rastreador</h3>
+          <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+        </li>
+      </ul>
+    </article>
+  </main>
+
+  <footer class="rodape">
     <p>Bikcraft. Alguns Direitos Reservados.</p>
-  </div>
-
-
+  </footer>
 </body>
 
 </html>
